# vins_so

./: CMakeLists.txt  README.md  TODO_LIST  package.xml
include/vins_so/estimator/: InertialPredict.h  estimator.h  vins_parameters.h
include/vins_so/estimator/factor/: GpsSinglePointFactor.h  MecanumWheelVelFactor.h  ProjectionFactorMultiCam.h  ProjectionFactorSingleCam.h  imu_factor.h  integration_base.h  marginalization_factor.h  monoprojectionfactor.h  pose_local_parameterization.h  stereoprojectionfactor.h  stereotimeprojectionfactor.h
include/vins_so/estimator/feature_manager/: WheelManager.h  feature_manager.h
include/vins_so/estimator/initial_lib/InitialBase/: initialbase.h  initialgen.h
include/vins_so/estimator/initial_lib/InitialEx/: InitialEx.h  InitialExRotationCamCam.h  InitialExRotationCamImu.h  exParam.h
include/vins_so/estimator/initial_lib/InitialMono/: initial_sfm.h  initialmonovio.h  solve_5pts.h
include/vins_so/estimator/initial_lib/InitialStereoPnP/: initialstereoviopnp.h
include/vins_so/estimator/initial_lib/InitialStereoVio/: initialstereovio.h
include/vins_so/estimator/initial_lib/InitialSys/: initialsys.h
include/vins_so/estimator/initial_lib/VisaulImuAligment/: visaulimualigment.h
include/vins_so/estimator/initial_lib/VisualImuAlignment/: Solvegyroscopebias.h  VisualImuAlignmentVel.h  VisualImuAlignmentVelScale.h
include/vins_so/estimator/slideWindow/: slidewindowbase.h  slidewindowimu.h  slidewindowpose.h  slidewindowposevel.h
include/vins_so/ros/: CameraPoseVisualization.h  EstimateInputROS.h  EstimateOutputROS.h  EstimatorROS.h  ParamROS.h  VisualInertialMeasurements.h  VisualInertialMecMeasurements.h  ros_io.h
include/vins_so/type/: featuretype.h  imudata.h  transform.h
include/vins_so/utility/: CameraPoseVisualization.h  ros_utility.h  tic_toc.h  utility.h  visualization.h
launch/: 1.launch  car.launch  dualfisheye.launch  f.launch  occam.launch  px2.launch  resize.launch  stereodual.launch  tara.launch  tum.launch  visensor.launch
src/: estimator_node.cpp  test.cpp  tf_test.cpp
src/estimator/: InertialPredict.cpp  estimator.cpp  vins_parameters.cpp
src/estimator/factor/: GpsSinglePointFactor.cpp  MecanumWheelVelFactor.cpp  ProjectionFactorMultiCam.cpp  ProjectionFactorSingleCam.cpp  marginalization_factor.cpp  monoprojectionfactor.cpp  pose_local_parameterization.cpp  stereoprojectionfactor.cpp  stereotimeprojectionfactor.cpp
src/estimator/feature_manager/: WheelManager.cpp  feature_manager.cpp
src/estimator/initial_lib/InitialBase/: initialbase.cpp  initialgen.cpp
src/estimator/initial_lib/InitialEx/: InitialEx.cpp  InitialExRotationCamCam.cpp  InitialExRotationCamImu.cpp  exParam.cpp
src/estimator/initial_lib/InitialMono/: initial_sfm.cpp  initialmonovio.cpp  solve_5pts.cpp
src/estimator/initial_lib/InitialStereoPnP/: initialstereoviopnp.cpp
src/estimator/initial_lib/InitialStereoVio/: initialstereovio.cpp
src/estimator/initial_lib/InitialSys/: initialsys.cpp
src/estimator/initial_lib/VisaulImuAligment/: visaulimualigment.cpp
src/estimator/initial_lib/VisualImuAlignment/: VisualImuAlignmentVel.cpp  VisualImuAlignmentVelScale.cpp
src/estimator/slideWindow/: slidewindowbase.cpp  slidewindowimu.cpp  slidewindowpose.cpp  slidewindowposevel.cpp
src/loop-closure/: TemplatedLoopDetector.h  keyframe.cpp  keyframe.h
src/ros/: CameraPoseVisualization.cpp  EstimateInputROS.cpp  EstimateOutputROS.cpp  EstimatorROS.cpp  ParamROS.cpp  ros_io.cpp
src/utility/: CameraPoseVisualization.cpp  utility.cpp  visualization.cpp
